// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentContainer renders a larger title and subtitle 1`] = `
<div
  className=""
>
  <div>
    <div
      className=""
    >
      <div>
        <div />
      </div>
      <video
        autoPlay={true}
        loop={true}
        muted={true}
        playsInline={true}
      >
        <source
          src="https://video.url.com"
          type="video/mp4"
        />
      </video>
    </div>
  </div>
  <div>
    <h1>
      Title
    </h1>
    <h5>
      Subtitle
    </h5>
    <div>
      Content body.
    </div>
  </div>
</div>
`;

exports[`ContentContainer renders a subtitle in the content in the default size 1`] = `
<div
  className=""
>
  <div>
    <div
      className=""
    >
      <div>
        <div />
      </div>
      <video
        autoPlay={true}
        loop={true}
        muted={true}
        playsInline={true}
      >
        <source
          src="https://video.url.com"
          type="video/mp4"
        />
      </video>
    </div>
  </div>
  <div>
    <h2>
      Title
    </h2>
    <h6>
      Subtitle
    </h6>
    <div>
      Content body.
    </div>
  </div>
</div>
`;

exports[`ContentContainer renders a video with background image and content in default layout 1`] = `
<div
  className=""
>
  <div>
    <div
      className=""
    >
      <div>
        <div />
      </div>
      <video
        autoPlay={true}
        loop={true}
        muted={true}
        playsInline={true}
      >
        <source
          src="https://video.url.com"
          type="video/mp4"
        />
      </video>
    </div>
  </div>
  <div>
    <h2>
      Title
    </h2>
    <div>
      Content body.
    </div>
  </div>
</div>
`;

exports[`ContentContainer renders an image and content in default layout 1`] = `
<div
  className=""
>
  <div>
    <div
      className=""
    >
      <div>
        <div />
      </div>
    </div>
  </div>
  <div>
    <h2>
      Title
    </h2>
    <div>
      Content body.
    </div>
  </div>
</div>
`;

exports[`ContentContainer renders content in default layout without media 1`] = `
<div
  className=""
>
  <div>
    <h2>
      Title
    </h2>
    <div>
      Content body.
    </div>
  </div>
</div>
`;
